<resources>
    <string name="app_name">Odis</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_aktionen">Aktionen</string>
    <string name="nav_was">Was ist hier?</string>
    <string name="nav_raeume">Räume</string>
    <string name="nav_ueber_app">Über diese App</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Aktionen</item>
        <item>Was ist hier?</item>
        <item>Räume</item>
        <item>Über diese App</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
